--- a/project_section.html
+++ b/project_section.html
@@ -44,6 +44,8 @@
          class="inline-block mt-2 px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600">
          View Project
       </a>
+
+    
     </div>
 
     <!-- Project Card -->
@@ -119,10 +121,26 @@
          The computer will also choose a random option, and the results will be displayed.
          You can win, lose, or tie. Scores are tracked at the bottom. We'll use HTML for structure, CSS for a modern look, and JavaScript to generate the computer's choice and compare the results.
          This game is an interactive way to test your luck and strategy against a computer opponent.</p>
+         <div class="flex space-x-3">
       <a href="project2/index.html" target="_blank" 
          class="inline-block mt-2 px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600">
          View Project
       </a>
+
+     <a href="https://github.com/Aidan226/weather-api-project/blob/master/month_calendar.html" target="_blank" class="inline-flex items-center px-4 py-2 bg-gray-800 text-white rounded-lg hover:bg-gray-900 ">
+       <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24">
+         <path d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.438 9.8 8.205 11.387.6.113.82-.263.82-.583 
+                  0-.288-.01-1.05-.015-2.06-3.338.726-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.756-1.333-1.756-1.09-.744.083-.729.083-.729 
+                  1.205.085 1.84 1.237 1.84 1.237 1.07 1.835 2.807 1.305 3.492.997.108-.774.42-1.305.763-1.605-2.665-.305-5.466-1.335-5.466-5.93 
+                  0-1.31.468-2.38 1.236-3.22-.123-.303-.536-1.527.117-3.176 0 0 1.008-.322 3.3 1.23a11.5 11.5 0 013.003-.404c1.02.005 
+                  2.047.138 3.003.404 2.29-1.552 3.296-1.23 3.296-1.23.655 1.65.242 2.873.12 3.176.77.84 
+                  1.236 1.91 1.236 3.22 0 4.61-2.807 5.624-5.48 5.92.432.37.816 1.096.816 2.21 
+                  0 1.595-.015 2.877-.015 3.267 0 .322.216.7.825.58C20.565 21.795 
+                  24 17.295 24 12c0-6.63-5.373-12-12-12z"/>
+       </svg>
+       View Code
+     </a>
+     </div>
     </div>
 
     <div class="bg-white rounded-2xl shadow hover:shadow-lg transition p-4">
@@ -132,10 +150,26 @@
          The computer will also choose a random option, and the results will be displayed.
          You can win, lose, or tie. Scores are tracked at the bottom. We'll use HTML for structure, CSS for a modern look, and JavaScript to generate the computer's choice and compare the results.
          This game is an interactive way to test your luck and strategy against a computer opponent.</p>
+         <div class="flex space-x-3">
       <a href="project2/index.html" target="_blank" 
          class="inline-block mt-2 px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600">
          View Project
       </a>
+
+     <a href="https://github.com/Aidan226/weather-api-project/blob/master/to_do_list.html" target="_blank" class="inline-flex items-center px-4 py-2 bg-gray-800 text-white rounded-lg hover:bg-gray-900 ">
+       <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24">
+         <path d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.438 9.8 8.205 11.387.6.113.82-.263.82-.583 
+                  0-.288-.01-1.05-.015-2.06-3.338.726-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.756-1.333-1.756-1.09-.744.083-.729.083-.729 
+                  1.205.085 1.84 1.237 1.84 1.237 1.07 1.835 2.807 1.305 3.492.997.108-.774.42-1.305.763-1.605-2.665-.305-5.466-1.335-5.466-5.93 
+                  0-1.31.468-2.38 1.236-3.22-.123-.303-.536-1.527.117-3.176 0 0 1.008-.322 3.3 1.23a11.5 11.5 0 013.003-.404c1.02.005 
+                  2.047.138 3.003.404 2.29-1.552 3.296-1.23 3.296-1.23.655 1.65.242 2.873.12 3.176.77.84 
+                  1.236 1.91 1.236 3.22 0 4.61-2.807 5.624-5.48 5.92.432.37.816 1.096.816 2.21 
+                  0 1.595-.015 2.877-.015 3.267 0 .322.216.7.825.58C20.565 21.795 
+                  24 17.295 24 12c0-6.63-5.373-12-12-12z"/>
+       </svg>
+       View Code
+     </a>
+     </div>
     </div>
 
     <div class="bg-white rounded-2xl shadow hover:shadow-lg transition p-4">
@@ -145,10 +179,54 @@
          The computer will also choose a random option, and the results will be displayed.
          You can win, lose, or tie. Scores are tracked at the bottom. We'll use HTML for structure, CSS for a modern look, and JavaScript to generate the computer's choice and compare the results.
          This game is an interactive way to test your luck and strategy against a computer opponent.</p>
+      <div class="flex space-x-3">
       <a href="project2/index.html" target="_blank" 
          class="inline-block mt-2 px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600">
          View Project
       </a>
+
+     <a href="https://github.com/Aidan226/weather-api-project/blob/master/digital_clock.html" target="_blank" class="inline-flex items-center px-4 py-2 bg-gray-800 text-white rounded-lg hover:bg-gray-900 ">
+       <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24">
+         <path d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.438 9.8 8.205 11.387.6.113.82-.263.82-.583 
+                  0-.288-.01-1.05-.015-2.06-3.338.726-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.756-1.333-1.756-1.09-.744.083-.729.083-.729 
+                  1.205.085 1.84 1.237 1.84 1.237 1.07 1.835 2.807 1.305 3.492.997.108-.774.42-1.305.763-1.605-2.665-.305-5.466-1.335-5.466-5.93 
+                  0-1.31.468-2.38 1.236-3.22-.123-.303-.536-1.527.117-3.176 0 0 1.008-.322 3.3 1.23a11.5 11.5 0 013.003-.404c1.02.005 
+                  2.047.138 3.003.404 2.29-1.552 3.296-1.23 3.296-1.23.655 1.65.242 2.873.12 3.176.77.84 
+                  1.236 1.91 1.236 3.22 0 4.61-2.807 5.624-5.48 5.92.432.37.816 1.096.816 2.21 
+                  0 1.595-.015 2.877-.015 3.267 0 .322.216.7.825.58C20.565 21.795 
+                  24 17.295 24 12c0-6.63-5.373-12-12-12z"/>
+       </svg>
+       View Code
+     </a>
+     </div>
+    </div>
+
+    <div class="bg-white rounded-2xl shadow hover:shadow-lg transition p-4">
+      <img src="" alt="Project 2" class="rounded-lg mb-4">
+      <h3 class="text-xl font-semibold">Project 2</h3>
+      <p class="text-gray-600 mb-2" style="font-family: Inter, Inter Fallback">In this project, we create a rock, paper, and scissors game.
+         The computer will also choose a random option, and the results will be displayed.
+         You can win, lose, or tie. Scores are tracked at the bottom. We'll use HTML for structure, CSS for a modern look, and JavaScript to generate the computer's choice and compare the results.
+     <div class="flex space-x-3">
+      <a href="project2/index.html" target="_blank" 
+         class="inline-block mt-2 px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600">
+         View Project
+      </a>
+
+     <a href="https://github.com/Aidan226/weather-api-project/blob/master/currency_converter.html" target="_blank" class="inline-flex items-center px-4 py-2 bg-gray-800 text-white rounded-lg hover:bg-gray-900 ">
+       <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24">
+         <path d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.438 9.8 8.205 11.387.6.113.82-.263.82-.583 
+                  0-.288-.01-1.05-.015-2.06-3.338.726-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.756-1.333-1.756-1.09-.744.083-.729.083-.729 
+                  1.205.085 1.84 1.237 1.84 1.237 1.07 1.835 2.807 1.305 3.492.997.108-.774.42-1.305.763-1.605-2.665-.305-5.466-1.335-5.466-5.93 
+                  0-1.31.468-2.38 1.236-3.22-.123-.303-.536-1.527.117-3.176 0 0 1.008-.322 3.3 1.23a11.5 11.5 0 013.003-.404c1.02.005 
+                  2.047.138 3.003.404 2.29-1.552 3.296-1.23 3.296-1.23.655 1.65.242 2.873.12 3.176.77.84 
+                  1.236 1.91 1.236 3.22 0 4.61-2.807 5.624-5.48 5.92.432.37.816 1.096.816 2.21 
+                  0 1.595-.015 2.877-.015 3.267 0 .322.216.7.825.58C20.565 21.795 
+                  24 17.295 24 12c0-6.63-5.373-12-12-12z"/>
+       </svg>
+       View Code
+     </a>
+     </div>
     </div>
 
     <div class="bg-white rounded-2xl shadow hover:shadow-lg transition p-4">
@@ -158,10 +236,26 @@
          The computer will also choose a random option, and the results will be displayed.
          You can win, lose, or tie. Scores are tracked at the bottom. We'll use HTML for structure, CSS for a modern look, and JavaScript to generate the computer's choice and compare the results.
          This game is an interactive way to test your luck and strategy against a computer opponent.</p>
+      <div class="flex space-x-3">
       <a href="project2/index.html" target="_blank" 
          class="inline-block mt-2 px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600">
          View Project
       </a>
+
+     <a href="https://github.com/Aidan226/weather-api-project/blob/master/Q%26A.html" target="_blank" class="inline-flex items-center px-4 py-2 bg-gray-800 text-white rounded-lg hover:bg-gray-900 ">
+       <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24">
+         <path d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.438 9.8 8.205 11.387.6.113.82-.263.82-.583 
+                  0-.288-.01-1.05-.015-2.06-3.338.726-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.756-1.333-1.756-1.09-.744.083-.729.083-.729 
+                  1.205.085 1.84 1.237 1.84 1.237 1.07 1.835 2.807 1.305 3.492.997.108-.774.42-1.305.763-1.605-2.665-.305-5.466-1.335-5.466-5.93 
+                  0-1.31.468-2.38 1.236-3.22-.123-.303-.536-1.527.117-3.176 0 0 1.008-.322 3.3 1.23a11.5 11.5 0 013.003-.404c1.02.005 
+                  2.047.138 3.003.404 2.29-1.552 3.296-1.23 3.296-1.23.655 1.65.242 2.873.12 3.176.77.84 
+                  1.236 1.91 1.236 3.22 0 4.61-2.807 5.624-5.48 5.92.432.37.816 1.096.816 2.21 
+                  0 1.595-.015 2.877-.015 3.267 0 .322.216.7.825.58C20.565 21.795 
+                  24 17.295 24 12c0-6.63-5.373-12-12-12z"/>
+       </svg>
+       View Code
+     </a>
+     </div>
     </div>
 
     <div class="bg-white rounded-2xl shadow hover:shadow-lg transition p-4">
@@ -171,23 +265,26 @@
          The computer will also choose a random option, and the results will be displayed.
          You can win, lose, or tie. Scores are tracked at the bottom. We'll use HTML for structure, CSS for a modern look, and JavaScript to generate the computer's choice and compare the results.
          This game is an interactive way to test your luck and strategy against a computer opponent.</p>
+     <div class="flex space-x-3">
       <a href="project2/index.html" target="_blank" 
          class="inline-block mt-2 px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600">
          View Project
       </a>
-    </div>
 
-    <div class="bg-white rounded-2xl shadow hover:shadow-lg transition p-4">
-      <img src="" alt="Project 2" class="rounded-lg mb-4">
-      <h3 class="text-xl font-semibold">Project 2</h3>
-      <p class="text-gray-600 mb-2" style="font-family: Inter, Inter Fallback">In this project, we create a rock, paper, and scissors game.
-         The computer will also choose a random option, and the results will be displayed.
-         You can win, lose, or tie. Scores are tracked at the bottom. We'll use HTML for structure, CSS for a modern look, and JavaScript to generate the computer's choice and compare the results.
-         This game is an interactive way to test your luck and strategy against a computer opponent.</p>
-      <a href="project2/index.html" target="_blank" 
-         class="inline-block mt-2 px-4 py-2 bg-blue-500 text-white rounded-lg hover:bg-blue-600">
-         View Project
-      </a>
+     <a href="" target="_blank" class="inline-flex items-center px-4 py-2 bg-gray-800 text-white rounded-lg hover:bg-gray-900 ">
+       <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24">
+         <path d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.438 9.8 8.205 11.387.6.113.82-.263.82-.583 
+                  0-.288-.01-1.05-.015-2.06-3.338.726-4.042-1.61-4.042-1.61-.546-1.387-1.333-1.756-1.333-1.756-1.09-.744.083-.729.083-.729 
+                  1.205.085 1.84 1.237 1.84 1.237 1.07 1.835 2.807 1.305 3.492.997.108-.774.42-1.305.763-1.605-2.665-.305-5.466-1.335-5.466-5.93 
+                  0-1.31.468-2.38 1.236-3.22-.123-.303-.536-1.527.117-3.176 0 0 1.008-.322 3.3 1.23a11.5 11.5 0 013.003-.404c1.02.005 
+                  2.047.138 3.003.404 2.29-1.552 3.296-1.23 3.296-1.23.655 1.65.242 2.873.12 3.176.77.84 
+                  1.236 1.91 1.236 3.22 0 4.61-2.807 5.624-5.48 5.92.432.37.816 1.096.816 2.21 
+                  0 1.595-.015 2.877-.015 3.267 0 .322.216.7.825.58C20.565 21.795 
+                  24 17.295 24 12c0-6.63-5.373-12-12-12z"/>
+       </svg>
+       View Code
+     </a>
+     </div>
     </div>
 
 
