--- a/HTML_courses/tables.html
+++ b/HTML_courses/tables.html
@@ -40,8 +40,8 @@
         linear-gradient(180deg, var(--bg-1), var(--bg-2));
       line-height:1.7;
     }
-    a{color:var(--brand-1);text-decoration:underline;}
-    a:hover{color:var(--brand-2);}
+    a{color:inherit;text-decoration:none}
+
     .topnav{
       position:sticky; top:0; z-index:1000;
       height:var(--nav-h);
@@ -261,6 +261,12 @@
         flex-direction:column; gap:1rem;
       }
     }
+    .nav-links a,
+.nav-links a:hover,
+.nav-links a:active,
+.nav-links a:visited {
+  text-decoration: none !important;
+}
   </style>
 </head>
 <body>
@@ -272,16 +278,16 @@
         DevNest
       </a>
       <nav class="nav-links" aria-label="Primary">
-          <a href="/Main_web_page.html">Home</a>
+        <a href="/">Home</a>
         <a href="/courses.html" style="color:var(--text)">Courses</a>
-        <a href="/mini_code_editor.html">Practice</a>
-        <a href="/project_section.html">Projects</a>
+        <a href="/practice.html">Practice</a>
+        <a href="/projects.html">Projects</a>
         <a href="/about.html">About</a>
       </nav>
-      <!-- <button class="login-btn">Login</button>
+      <button class="login-btn">Login</button>
       <div class="hamburger">
         <button class="login-btn" style="padding:8px 14px;">Menu</button>
-      </div> -->
+      </div>
     </div>
   </header>
   <div id="page" class="layout">
@@ -303,7 +309,7 @@
             <a href="heading.html">Headings &amp; Paragraphs</a>
             <a href="lists.html">Lists</a>
             <a href="links.html">Links</a>
-            <a href="image.html">Images</a>
+            <a href="images.html">Images</a>
             <a href="tables.html" class="active">Tables</a>
             <a href="forms.html">Forms</a>
           </nav>
